# NoobsHPC

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  code_clean.sh  run.sh  run_benchmark.sh
benchmark/: CMakeLists.txt  README.md
benchmark/x86/: bench_axpy.cpp  bench_cblas_gemm_x86.cpp  bench_common.h  bench_common_x86.h  bench_convolution.cpp  bench_convolution_x86.cpp  bench_gemm_mkl.cpp  bench_inner_product_x86.cpp
cmake/: colors.cmake  compiler.cmake  compiler_options.cmake  configure_status.cmake  doc.cmake  find_modules.cmake  gather.cmake  link.cmake  modules.cmake  msg_color.cmake  statistic.cmake  status.cmake  utils.cmake
cmake/config/: Doxyfile  noobsdl_config.h  noobsdnn.config  noobsdnn_config.h  noobshpc.config
doxygen/: .gitignore  Doxyfile
framework/: CMakeLists.txt
framework/core/: any.h  base.h  common_macros.h  data_types.h  factory.h  functor.h  mem_info.h  parameter.h  singleton.h  thread_pool.h  thread_safe_macros.h  tls.h  type_traits_extend.h  types.h
icesword/: CMakeLists.txt  debug.h  icesword.h  icesword_funcs_param.h  icesword_types.h  impl_param.h  params.h  timer.h  types.h  utils.h
icesword/core/: buffer.h  common.h  context.h  data_traits.h  device.h  env.h  events.h  shape.h  target_traits.h  target_wrapper.h  tensor.h  tensor_op.cpp  tensor_op.h  tensor_traits.h  timer.h
icesword/core/impl/x86/: x86_device.cpp  x86_impl.cpp
icesword/core/logger/: log_utils.h  logger.h  logger_core.h
icesword/core/tensor/: buffer.h  data_traits.h  layout.h  shape.h  tensor.h  tensor_op.h
icesword/funcs/: CMakeLists.txt  activation.h  argmax.h  axpy.h  base.h  cast.h  concat.h  concat_nhwc.h  conv.h  conv_act.h  conv_act_conv1x1_act.h  conv_act_pooling.h  crf_decoding.h  crop.h  ctc_align.h  debug.h  deconv.h  deconv_act.h  deformable_conv.h  detection_output.h  eltwise.h  eltwise_act.h  embedding.h  fc.h  flatten.h  funcs_utils.h  gru.h  im2sequence.h  layer_norm.h  lrn.h  lstm.h  mat_mul.h  mvn.h  normalize.h  pad.h  permute.h  permute_power.h  pooling.h  pooling_nhwc.h  pooling_with_index.h  (+14 more)
icesword/funcs/impl/: detection_helper.cpp  detection_helper.h  impl_activation.h  impl_argmax.h  impl_axpy.h  impl_base.h  impl_box_coder.h  impl_cast.h  impl_concat.h  impl_concat_nhwc.h  impl_conv.h  impl_conv_act.h  impl_conv_act_conv1x1_act.h  impl_conv_act_pooling.h  impl_conv_eltwise.h  impl_crf_decoding.h  impl_crop.h  impl_ctc_align.h  impl_deconv.h  impl_deconv_act.h  impl_deformable_conv.h  impl_detection_output.h  impl_eltwise.h  impl_eltwise_act.h  impl_embedding.h  impl_fc.h  impl_flatten.h  impl_gru.h  impl_im2sequence.h  impl_layer_norm.h  impl_lrn.h  impl_lstm.h  impl_macro.h  impl_mat_mul.h  impl_multiclass_nms.h  impl_mvn.h  impl_normalize.h  impl_pad.h  impl_permute.h  impl_permute_power.h  (+16 more)
icesword/funcs/impl/x86/: activation_functions.h  avx2_math.h  avx512_math.h  fc.cpp  fc.h  jit_call_conf.h  lstm.cpp  lstm.h  mkl_packed_weight.h  scale.cpp  scale.h  sequence2batch.cpp  sequence2batch.h  x86_common.h
icesword/funcs/impl/x86/kernel/: jit_generator.h
icesword/layer/: CMakeLists.txt  base.h  layer.h  layer_base.h  layer_declear.h
icesword/layer/x86/: common.h  fc_forward.cpp  fc_forward.h  fc_x86.cpp  fc_x86.h  x86_utils.h
icesword/operator/: engine.h  gemm.h  operator.h  reorder.h
icesword/operator/x86/: activation.h  activation_avx2.cpp  activation_ref.cpp  activation_x86.cpp  activation_x86.h  argmax_x86.h  axpy.h  axpy_avx2.cpp  axpy_ref.cpp  axpy_sse.cpp  axpy_x86.cpp  axpy_x86.h  common.h  common_x86.h  convolution.h  convolution_gemm.cpp  convolution_ref.cpp  convolution_x86.cpp  convolution_x86.h  gemm_mkl.cpp  gemm_mkl.h  gemm_mkl_ref.h  inner_product_x86.cpp  inner_product_x86.h  omp_thread.h  omp_thread_x86.h  pooling_x86.cpp  pooling_x86.h  reference_x86.h  reorder_ref.h  softmax_x86.cpp  softmax_x86.h
icesword/operator/x86/kernel/: cblas_gemm_x86.cpp  cblas_gemm_x86.h  cpu_isa.h  gemm_ref_x86.h  jit_call_conf.h  jit_generate.h
icesword/tensor/: buffer.h  data_traits.h  layout.h  shape.h  tensor.h  tensor_op.h
test/: CMakeLists.txt
test/icesword/x86/: test_fc_x86.cpp  test_fc_x86.h  test_func_x86.h  test_lstm_multilayer_x86.cpp  test_lstm_multilayer_x86.h  test_tensor_x86.cpp  test_tensor_x86.h  x86_test_common.h
test/saber/x86/: test_saber_func_fc_x86.cpp  test_saber_func_lstm_multilayer_x86.h  test_saber_func_x86.h  test_saber_tensor_x86.cpp  x86_test_common.h
test/x86/: test_common.h  test_fc_x86.cpp  test_func.h  test_saber_func_lstm_multilayer_x86.cpp  test_saber_func_softmax_x86.cpp
unit_test/: CMakeLists.txt  test_axpy.cpp  test_common.h  test_conf.h  test_convolution.cpp  test_func.h  test_gemm.cpp  test_gemm_mkl.cpp  test_inner_product.cpp  test_pooling.cpp
unit_test/framework/: README.md  engine_test.h  test_base.h
utils/logger/: log_utils.h  logger.h  logger_core.h
utils/unit_test/: README.md  aktest.h  engine_test.h  nbtest.h  tensor_ops.h  test_base.h
